# BudgetManager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
budget/: __init__.py  __main__.py
budget/application/: __init__.py  services.py
budget/data/: .gitignore  categories.csv
budget/domain/: __init__.py  models.py
budget/infrastructure/: __init__.py
budget/infrastructure/config_loader/: __init__.py  categories_loader.py
budget/infrastructure/db/: __init__.py  connection.py
budget/presentation/: __init__.py
budget/presentation/qt/: __init__.py  bullet_utils.py  constants.py  main_window.py  models.py  plan_editor_dialog.py  selection.py  summary_tab.py  transactions_tab.py  ui_text.py  validators.py
tests/: test_categories_loader.py  test_smoke.py
